@@ -1,4 +1,3 @@
-/*
 /*******************************************************************************
  * Copyright (C) 2018 MINHAFP, Gobierno de Espa&ntilde;a
  * This program is licensed and may be used, modified and redistributed under the  terms
@@ -24,17 +23,15 @@
  */
 package es.gob.fire.web.rest.controller;
 
-import java.security.GeneralSecurityException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.validation.constraints.NotEmpty;
 
-import es.gob.fire.commons.log.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.json.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
@@ -48,7 +45,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.fasterxml.jackson.annotation.JsonView;
@@ -59,15 +55,13 @@ import es.gob.fire.i18n.IWebViewMessages;
 import es.gob.fire.i18n.Language;
 import es.gob.fire.persistence.dto.ApplicationDTO;
 import es.gob.fire.persistence.dto.ProviderApplicationDTO;
-import es.gob.fire.persistence.dto.ProviderDTO;
 import es.gob.fire.persistence.entity.Application;
 import es.gob.fire.persistence.entity.ApplicationResponsible;
 import es.gob.fire.persistence.entity.Certificate;
-import es.gob.fire.persistence.entity.ProviderApplication;
 import es.gob.fire.persistence.entity.User;
 import es.gob.fire.persistence.service.IApplicationService;
-import es.gob.fire.persistence.service.ICertificateService;
 import es.gob.fire.persistence.service.IProviderService;
+import es.gob.fire.service.ICertificateService;
 
 /**
  * <p>Class that manages the REST requests related to the Applications administration and JSON communication.</p>
@@ -80,7 +74,7 @@ public class ApplicationRestController {
 	/**
 	 * Attribute that represents the object that manages the log of the class.
 	 */
-	private static final Logger LOGGER = Logger.getLogger(ApplicationRestController.class);
+	private static final Logger LOGGER = LogManager.getLogger(ApplicationRestController.class);
 
 	/**
 	 * Attribute that represents the identifier of the selected alarms from the summary.
@@ -118,6 +112,16 @@ public class ApplicationRestController {
 	private static final String FIELD_CERTIFICATE = "cert";
 
 	/**
+	 * Constant that represents the field 'organization'.
+	 */
+	private static final String FIELD_ORGANIZATION = "organization";
+
+	/**
+	 * Constant that represents the field 'dir3Code'.
+	 */
+	private static final String FIELD_DIR3CODE = "dir3Code";
+
+	/**
 	 * Attribute that represents the span text.
 	 */
 	private static final String SPAN = "_span";
@@ -126,6 +130,11 @@ public class ApplicationRestController {
 	 * Constant that represents the parameter 'rowIndexApp'.
 	 */
 	private static final String FIELD_ROW_INDEX_APPLICATION = "rowIndexApp";
+
+	/**
+	 * Constant that represents the field 'user'.
+	 */
+	private static final String GENERAL_ERROR = "generalError";
 
 	/**
 	 * Attribute that represents the service object for accessing the
@@ -140,7 +149,7 @@ public class ApplicationRestController {
 	 */
 	@Autowired
 	private ICertificateService certificateService;
-	
+
 	/**
 	 * Attribute that represents the service object for accessing the
 	 * repository.
@@ -154,7 +163,7 @@ public class ApplicationRestController {
 	@Autowired
 	private MessageSource messageSource;
 
-	
+
 	/**
 	 * Method that maps the list users web requests to the controller and
 	 * forwards the list of apps to the view.
@@ -179,30 +188,10 @@ public class ApplicationRestController {
 	 */
 	@RequestMapping(path = "/previewCertApp", method = RequestMethod.GET)
 	public String previewCertApp(@RequestParam("idCertificate") final Long idCertificate) {
-
-		LOGGER.warn(" ======= /previewCertApp: Obtenemos los certificados asociados al ID: " + idCertificate);
-
-
 		String data = "";
 		final Certificate cert = this.certificateService.getCertificateByCertificateId(idCertificate);
-
-
-		LOGGER.warn(" ======= /previewCertApp: Hemos obtenido los certificados: " + cert);
-
-
-
-
 		if (cert != null) {
-
-			LOGGER.warn(" ======= /previewCertApp: Certificado principal: " + cert.getCertificate());
-
-
-
 			final String certPrincipal = this.certificateService.getCertificateText(cert.getCertificate());
-
-
-			LOGGER.warn(" ======= /previewCertApp: Texto del certificado principal: " + certPrincipal);
-
 			if(certPrincipal.isEmpty()) {
 				data += "--"; //$NON-NLS-1$
 			} else {
@@ -223,92 +212,115 @@ public class ApplicationRestController {
 	 * @return DataTablesOutput<Application>
 	 */
 	@RequestMapping(value = "/saveapp", method = RequestMethod.POST, produces = MediaType.APPLICATION_JSON_VALUE)
-	@JsonView(DataTablesOutput.View.class)
-	public @ResponseBody DataTablesOutput<Application> saveApplication(@RequestPart("appForm") final ApplicationDTO appForm, final HttpServletRequest request) {
-		final DataTablesOutput<Application> dtOutput = new DataTablesOutput<>();
-		
-		List<Application> listNewApplication = new ArrayList<>();
-		
-		final JSONObject json = new JSONObject();
-		
-		//Lista de usuarios
-		final List<Long> listUsers = new ArrayList<>();
+	@JsonView(Application.class)
+	public ResponseEntity<?> saveApplication(@RequestPart("appForm") final ApplicationDTO appForm, final HttpServletRequest request) {
+	    // Objeto para acumular los mensajes de error
+	    final JSONObject json = new JSONObject();
+	    // Lista para almacenar las organizations encontradas según el dir3Code
+	    List<String> availableOrganizations = new ArrayList<>();
 
-		if (!"-1".equals(appForm.getIdUsersSelected())) {
-			final String[] arrayUsers = appForm.getIdUsersSelected().split(",");
+	    // Procesar lista de usuarios responsables
+	    final List<Long> listUsers = new ArrayList<>();
+	    if (!"-1".equals(appForm.getIdUsersSelected())) {
+	        final String[] arrayUsers = appForm.getIdUsersSelected().split(",");
+	        for (final String userId : arrayUsers) {
+	            listUsers.add(Long.valueOf(userId));
+	        }
+	    }
 
-			for(int i=0; i < arrayUsers.length;i++){
-				listUsers.add(new Long(arrayUsers[i]));
-			}
-		}
+	    // Procesar lista de certificados
+	    final List<Long> listCertificates = new ArrayList<>();
+	    if (!"-1".equals(appForm.getIdCertificatesSelected())) {
+	        final String[] arrayCertificates = appForm.getIdCertificatesSelected().split(",");
+	        for (final String certId : arrayCertificates) {
+	            listCertificates.add(Long.valueOf(certId));
+	        }
+	    }
 
-		//Lista de certificados
-		final List<Long> listCertificates = new ArrayList<>();
-		
-		if (!"-1".equals(appForm.getIdCertificatesSelected())) {
-			final String[] arrayCertificates = appForm.getIdCertificatesSelected().split(",");
-			
-			for(int i=0; i < arrayCertificates.length;i++){
-				listCertificates.add(new Long(arrayCertificates[i]));
-			}
-		}
+	    // Procesar proveedores personalizados
+	    List<ProviderApplicationDTO> customProviders = new ArrayList<>();
+	    if (appForm.getCustomProviders() != null && !appForm.getCustomProviders().isEmpty()) {
+	        customProviders = appForm.getCustomProviders();
+	    }
 
-		//Proveedores
-		List<ProviderApplicationDTO> customProviders = new ArrayList<>();
-		if (appForm.getCustomProviders() != null && !appForm.getCustomProviders().isEmpty()) {
-			customProviders = appForm.getCustomProviders();
-		}
+	    // Bandera para detectar si existe algún error de validación
+	    boolean hasError = false;
 
-		//Comprobaciones de inputs
-		if (isAppNameBlank(appForm.getAppName()) || isAppNameSizeNotValid(appForm.getAppName()) || !isResponsibleSelected(listUsers) || !isCertificatesSelected(listCertificates)) {
+	    // Validación de que existan certificados en base de datos
+        if (this.certificateService.getAllCertificate().size() == 0) {
+            final String errorNoCerts = this.messageSource.getMessage(
+                IWebViewMessages.ERROR_VAL_NO_CERTS_IN_DB,
+                null,
+                request.getLocale()
+            );
+            json.put(FIELD_CERTIFICATE + SPAN, errorNoCerts);
+            json.put(GENERAL_ERROR, errorNoCerts);
+            hasError = true;
+        } else {
+        	// Validación de la selección de certificados
+    	    if (!isCertificatesSelected(listCertificates)) {
+    	        final String errorValCertSelected = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APP_CERT_SELECTED, null, request.getLocale());
+    	        json.put(FIELD_CERTIFICATE + SPAN, errorValCertSelected);
+    	        hasError = true;
+    	    }
+        }
 
-			if (isAppNameBlank(appForm.getAppName())) {
+	    // Validacion del nombre de la aplicación
+	    if (isAppNameBlank(appForm.getAppName())) {
+	        final String errorValEmptyAppName = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APPNAME_REQUIRED, null, request.getLocale());
+	        json.put(FIELD_APP_NAME + SPAN, errorValEmptyAppName);
+	        hasError = true;
+	    }
+	    if (isAppNameSizeNotValid(appForm.getAppName())) {
+	        final String errorValSizeAppName = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APPNAME_SIZE, null, request.getLocale());
+	        json.put(FIELD_APP_NAME + SPAN, errorValSizeAppName);
+	        hasError = true;
+	    }
+	    // Validacion de la selección de responsables
+	    if (!isResponsibleSelected(listUsers)) {
+	        final String errorValRespSelected = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APP_USER_SELECTED, null, request.getLocale());
+	        json.put(FIELD_RESPONSIBLE + SPAN, errorValRespSelected);
+	        hasError = true;
+	    }
 
-				final String errorValEmptyAppName = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APPNAME_REQUIRED, null, request.getLocale());
+	    // Validacion de organization y dir3Code
+	    if (appForm.getDir3Code() != null && !appForm.getDir3Code().isEmpty() && !appForm.getUpdateOrganization()) {
+	        availableOrganizations = this.appService.findOrganizationByDIR3(appForm.getDir3Code());
+	        if (availableOrganizations != null && !availableOrganizations.isEmpty()) {
+	            if (!availableOrganizations.contains(appForm.getOrganization())) {
+	                // Se anade la organizacion que se intenta guardar
+	                availableOrganizations.add(appForm.getOrganization());
+	                final String errorMsg = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APP_DIR3_WITH_MULTI_ORGANIZATION, null, request.getLocale());
+	                json.put(FIELD_ORGANIZATION + SPAN, errorMsg);
+	                hasError = true;
+	            }
+	        }
+	    }
 
-				json.put(FIELD_APP_NAME + SPAN, errorValEmptyAppName);
-			}
+	    // Si se encontraron errores de validación, se retorna un ResponseEntity con el error y la lista de organizations
+	    if (hasError) {
+	        final JSONObject errorResponse = new JSONObject();
+	        errorResponse.put("error", json.toString());
+	        
+	        if (availableOrganizations != null && !availableOrganizations.isEmpty()) {
+		        errorResponse.put("organizations", availableOrganizations);
+	        }
+	        return ResponseEntity.badRequest().body(errorResponse.toString());
+	    }
 
-			if (isAppNameSizeNotValid(appForm.getAppName())) {
-
-				final String errorValSizeAppName = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APPNAME_SIZE, null, request.getLocale());
-
-				json.put(FIELD_APP_NAME + SPAN, errorValSizeAppName);
-			}
-
-			if (!isResponsibleSelected(listUsers)) {
-
-				final String errorValRespSelected = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APP_USER_SELECTED, null, request.getLocale());
-
-				json.put(FIELD_RESPONSIBLE + SPAN, errorValRespSelected);
-			}
-			
-			if (!isCertificatesSelected(listCertificates)) {
-				
-				final String errorValRespSelected = this.messageSource.getMessage(IWebViewMessages.ERROR_VAL_APP_CERT_SELECTED, null, request.getLocale());
-
-				json.put(FIELD_CERTIFICATE + SPAN, errorValRespSelected);
-			}
-
-			dtOutput.setError(json.toString());
-
-		} else {
-			try {
-				final Application newApp = this.appService.saveApplication(appForm, listUsers, listCertificates, customProviders);
-
-				listNewApplication.add(newApp);
-
-			} catch (final GeneralSecurityException e) {
-				LOGGER.error(Language.getResWebFire(IWebLogMessages.ERRORWEB022), e);
-				listNewApplication = StreamSupport.stream(this.appService.getAllApplication().spliterator(), false).collect(Collectors.toList());
-				json.put(KEY_JS_ERROR_SAVE_APP, Language.getResWebFire(IWebLogMessages.ERRORWEB022));
-				dtOutput.setError(json.toString());
-			}
-		}
-
-		dtOutput.setData(listNewApplication);
-
-		return dtOutput;
+	    try {
+	    	if (appForm.getUpdateOrganization()) {
+	    		final int appsUpdated = this.appService.renameOrganizationByDir3Code(appForm.getDir3Code(), appForm.getOrganization());
+	    	}
+	        final Application newApp = this.appService.saveApplication(appForm, listUsers, listCertificates, customProviders);
+	        return ResponseEntity.ok(newApp);
+	    } catch (final Exception e) {
+	        LOGGER.error(Language.getResWebFire(IWebLogMessages.ERRORWEB022), e);
+	        json.put(KEY_JS_ERROR_SAVE_APP, Language.getResWebFire(IWebLogMessages.ERRORWEB022));
+	        final JSONObject errorResponse = new JSONObject();
+	        errorResponse.put("error", json.toString());
+	        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(errorResponse.toString());
+	    }
 	}
 
 	/**
@@ -317,7 +329,7 @@ public class ApplicationRestController {
 	 * @param listCertificates A list of certificate IDs to check.
 	 * @return {@code true} if the list is not null and contains at least one certificate, {@code false} otherwise.
 	 */
-	private boolean isCertificatesSelected(List<Long> listCertificates) {
+	private boolean isCertificatesSelected(final List<Long> listCertificates) {
 		return listCertificates!=null && listCertificates.size()>0;
 	}
 
@@ -414,8 +426,8 @@ public class ApplicationRestController {
 		}
 
 		dtOutput.setDraw(NumberConstants.NUM1);
-		dtOutput.setRecordsFiltered((long) listaUser.size());
-		dtOutput.setRecordsTotal((long) listaUser.size());
+		dtOutput.setRecordsFiltered(listaUser.size());
+		dtOutput.setRecordsTotal(listaUser.size());
 		dtOutput.setData(listaUser);
 
 
@@ -429,22 +441,22 @@ public class ApplicationRestController {
 	    if (app != null) {
 	        app.setHabilitado(!app.isHabilitado());
 
-	        Application savedApp = this.appService.saveApplication(app);
-	        
-	        ApplicationDTO savedAppDTO = this.appService.applicationEntityToDto(savedApp);
+	        final Application savedApp = this.appService.saveApplication(app);
+
+	        final ApplicationDTO savedAppDTO = this.appService.applicationEntityToDto(savedApp);
 
 	        return ResponseEntity.ok(savedAppDTO);
 	    } else {
 	        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-	                             .body(Collections.singletonMap("error", "Aplicación no encontrada"));
+	                             .body(Collections.singletonMap("error", "Aplicacion no encontrada"));
 	    }
 	}
-	
+
 	@GetMapping(path = "/getProvidersOfApplication")
 	public ResponseEntity<?> getApplicationProviders(@RequestParam(FIELD_ID_APPLICATION) final String appId) {
-		Application app = this.appService.getAppByAppId(appId);
-		
-		List<ProviderApplicationDTO> listProviders = this.appService.findProvidersByApplication(app);
+		final Application app = this.appService.getAppByAppId(appId);
+
+		final List<ProviderApplicationDTO> listProviders = this.appService.findProvidersByApplication(app);
 
         return ResponseEntity.ok(listProviders);
 	}
